docs/quawk.ebnf
(* quawk concrete syntax grammar
 *
 * This file defines the implemented concrete syntax contract for quawk's
 * POSIX-oriented AWK dialect.
 *
 * Notes:
 * - NEWLINE means one physical line-break token.
 * - `#` starts a comment outside strings and regex literals and runs to the
 *   end of the physical line. The terminating newline, if present, still
 *   produces a NEWLINE token.
 * - sep is statement separation (semicolon or one/more newlines).
 * - expression precedence is encoded by nonterminal layering.
 * - concat_expr uses adjacency, so pure CFG is supplemented by the
 *   disambiguation rules at the end of the file.
 *)

program             ::= item*

item                ::= function_def
                      | pattern_action

function_def        ::= "function" IDENT "(" param_list? ")" action
param_list          ::= IDENT ("," IDENT)*

pattern_action      ::= pattern_range action?
                      | pattern action?
                      | action

pattern_range       ::= pattern "," pattern
pattern             ::= "BEGIN"
                      | "END"
                      | expr

action              ::= "{" stmt_list? "}"
stmt_list           ::= stmt (sep stmt)* sep?
sep                 ::= ";" | NEWLINE+

stmt                ::= action
                      | "if" "(" expr ")" stmt ("else" stmt)?
                      | "while" "(" expr ")" stmt
                      | "do" stmt "while" "(" expr ")"
                      | "for" "(" for_init? ";" expr? ";" for_update? ")" stmt
                      | "for" "(" IDENT "in" expr ")" stmt
                      | "break"
                      | "continue"
                      | "next"
                      | "nextfile"
                      | "exit" expr?
                      | "return" expr?
                      | "delete" lvalue ("[" subscript_list "]")?
                      | simple_stmt

for_init            ::= expr_list
for_update          ::= expr_list
expr_list           ::= expr ("," expr)*

simple_stmt         ::= print_stmt
                      | printf_stmt
                      | expr

print_stmt          ::= "print" expr_list?
printf_stmt         ::= "printf" expr ("," expr)*

subscript_list      ::= expr ("," expr)*
lvalue              ::= IDENT
                      | IDENT "[" subscript_list "]"
                      | "$" expr

expr                ::= assign_expr

assign_expr         ::= conditional_expr
                      | lvalue assign_op assign_expr
assign_op           ::= "=" | "+=" | "-=" | "*=" | "/=" | "%=" | "^="

conditional_expr    ::= or_expr ("?" expr ":" conditional_expr)?

or_expr             ::= and_expr ("||" and_expr)*
and_expr            ::= compare_expr ("&&" compare_expr)*
compare_expr        ::= match_expr ((rel_op | eq_op) match_expr)*
rel_op              ::= "<" | "<=" | ">" | ">="
eq_op               ::= "==" | "!="
match_expr          ::= in_expr (("~" | "!~") in_expr)*
in_expr             ::= concat_expr ("in" concat_expr)?

concat_expr         ::= add_expr (CONCAT add_expr)*
                      (* CONCAT is implicit; inserted by parser/lexer rule. *)

add_expr            ::= mul_expr (("+" | "-") mul_expr)*
mul_expr            ::= pow_expr (("*" | "/" | "%") pow_expr)*
pow_expr            ::= unary_expr ("^" pow_expr)?

unary_expr          ::= ("+" | "-" | "!" | "++" | "--") unary_expr
                      | postfix_expr

postfix_expr        ::= primary ("++" | "--")?

primary             ::= NUMBER
                      | STRING
                      | REGEX
                      | lvalue
                      | func_call
                      | "(" expr ")"

func_call           ::= IDENT "(" arg_list? ")"
arg_list            ::= expr ("," expr)*

(* Disambiguation rules
 *
 * Implicit concatenation
 *
 * AWK concatenation has no explicit token. Treat it as a synthetic binary
 * operator (CONCAT) with precedence:
 * - lower than + - * / % ^ and unary operators
 * - higher than comparisons, match operators, and logical operators
 *
 * Recommended parser rule:
 * 1. parse add_expr normally
 * 2. while the next token can start a primary or unary expression without an
 *    intervening separator that ends expressions, insert synthetic CONCAT and
 *    parse another add_expr
 *
 * can_start_concat_rhs is true for:
 * - IDENT, NUMBER, STRING, REGEX
 * - (
 * - $
 * - unary starters +, -, !, ++, --
 *
 * concat_blockers:
 * - ;, ,, ), ], }
 * - NEWLINE when grammar position requires statement termination
 * - binary operators that already continue the current expression
 *
 * Examples:
 * - print a b c parses as print ((a CONCAT b) CONCAT c)
 * - x = (a+1) "z" parses as x = ((a+1) CONCAT "z")
 * - a / b c parses as (a / b) CONCAT c
 *
 * REGEX token vs / operator
 *
 * / is context-sensitive:
 * - in operand position: /.../ begins a REGEX literal
 * - in operator position: / is division
 *
 * Use lexer state expect_operand : bool:
 * 1. initialize expect_operand = true at expression start
 * 2. if expect_operand is true and current char is /, lex a regexp literal
 *    until its closing unescaped /
 * 3. otherwise lex / as division operator
 *
 * Set expect_operand = true after:
 * - prefix operators
 * - opening delimiters
 * - separators and operators that require a following operand
 *
 * Set expect_operand = false after:
 * - literals
 * - identifiers and lvalues
 * - closing delimiters
 * - postfix operators
 *
 * Regex lexical details:
 * - / inside a character class [...] does not terminate the regex
 * - \/ is an escaped slash, not a terminator
 * - preserve raw regex text in token payload for later lowering
 *)
